--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -276,6 +276,7 @@ services:
     image: bitnami/keycloak:${KEYCLOAK_SERVER_VERSION}
     volumes:
       - keycloak-theme:/opt/bitnami/keycloak/themes/identity
+      - /home/ubuntu/certs:/opt/bitnami/keycloak/certs
     ports:
       - "18080:8080"
       - "18443:8443"
@@ -285,6 +286,10 @@ services:
       KEYCLOAK_DATABASE_PASSWORD: "#3]O?4RGj)DE7Z!9SA5"
       KEYCLOAK_ADMIN_USER: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
+      KEYCLOAK_ENABLE_HTTPS: true	  
+      KEYCLOAK_HTTPS_USE_PEM: true      
+      KEYCLOAK_HTTPS_CERTIFICATE_FILE: /opt/bitnami/keycloak/certs/fullchain.pem      
+      KEYCLOAK_HTTPS_CERTIFICATE_KEY_FILE: /opt/bitnami/keycloak/certs/privkey.pem
     restart: on-failure
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/auth" ]
