--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ELASTIC_VERSION=7.17.9
 KEYCLOAK_SERVER_VERSION=19.0.3
 MAILPIT_VERSION=v1.7.0
 POSTGRES_VERSION=14.5-alpine
-HOST=localhost
+HOST=35.175.130.16
 
 ## Configuration ##
 # By default the zeebe api is public, when setting this to `identity` a valid zeebe client token is required
